ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/OverloadedRecFldsFail10_A.hs
{-# LANGUAGE TypeFamilies #-}
module OverloadedRecFldsFail10_A where

data family F a
data instance F Int = MkFInt { foo :: Int }
